data/diff_tests/wasmtime/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2546.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\8c\80\80\80\00\01\03\6d\6f\64\04\66\75"
    "\6e\63\00\00\03\82\80\80\80\00\01\00\0a\98\80\80"
    "\80\00\01\92\80\80\80\00\01\01\7f\41\01\21\00\02"
    "\40\20\00\0e\00\00\0b\10\00\0b"
  )
""
)